- Added more utf-8 characters (ï)
- Added action to put windows in cascade
- Process switcher can be set to immutable, so massive actions on menu Windows, like minimize all, cascade, etc, don't affect it
- Allow to use your own charset file on ZX Vision
- Allow to get charset from a game and use as your own charset file on ZX Vision
- Allow to press ESC when selecting a line on a history items

Improved ZX Desktop
- When switching to full screen and disable ZX Desktop, windows are restored after disabling full screen
- Allow to disable border and footer when switching to full screen
- Set machine icon now is dynamic and shows machine icon indicated by parameter + an arrow

Improved Process Management: allow to copy any windows contents to internal clipboard

Improved ZRCP:
- Allow multiple simultaneous clients
- Important changes on ZRCP:
- Before:
* when a ZRCP connection is broken, cpu-step-mode will be disabled.
* when a ZRCP connection is closed by "quit", "exit" or "logout" command, cpu-step-mode will be disabled
* cpu-step-mode can't be disabled from the menu

- Now:
* when a ZRCP connection is broken, cpu-step-mode is not modified.
* when a ZRCP connection is closed by "quitt", "exit" or "logout" command, cpu-step-mode is not modified
* cpu-step-mode can be disabled from the menu, pressing ESC

Improved ZENG:
- Allow to connect more than two hosts
- Allow to disable sending input events (keyboard, joystick)
- Sync flash state between instances
- Added ZENG support for Jupiter Ace

Improved ZX Spectrum Next emulation:
- Updated machine id list

Fixed several memory leaks:
- Drawing Text Aventure Map
- Loading .Z80 snapshots
- Using the Speccy online browser
- Running the Hilow Audio Convert
- Enabling ZRCP
- Downloading ZEsarUX extras
- Downloading ZX Spectrum Next MMC image
- Syncing file image from File Utilities
- Copying a folder from File Utilities
- Showing First Aid Windows

Fixed Initialization of Visual memory tables