@@ -16,7 +16,7 @@
 
 
 
--iconos de dispositivos mmc/ide en escritorio 
+-iconos de dispositivos mmc/ide en escritorio
 
 -nuevos iconos suele quedar arriba a la izquierda debajo de una ventana, pues las ventanas tambien se posicionan por defecto ahi
 o bien nuevo icono se pone donde pulsado boton, o mirar si hay ventanas ahi. De todas maneras, otras acciones como quicksave, tambien
@@ -29,7 +29,7 @@ ponen iconos empezando arriba a la izquierda y tambien puede ser un problema
 el icono deberia verse de alguna manera diferente para decir que la ventana se ha minimizado (aunque realmente se ha cerrado y ya no esta ahi)
 -Minimizar. Si hay icono en escritorio de esa ventana, cerrar ventana ? no, al minimizar no debe cerrar ventana o se perderian quiza algunos
 settings de dicha ventana?
-*problema: minimizar no sale de la aplicación, solo cambia tamaño de ventana. habria que hacer que se cerrase cuando: la ventana indica 
+*problema: minimizar no sale de la aplicación, solo cambia tamaño de ventana. habria que hacer que se cerrase cuando: la ventana indica
 que tiene una funcion de entrada asociada. como indicar esto? en un parámetro de la zxvision_window ?
 
 -al pulsar un icono, si se hace desde una ventana, el icono se mantiene pulsado como es de esperar
@@ -108,7 +108,7 @@ ok?->pendiente controlar que ancho linea texto no exceda en total ancho pantalla
 Algun otro array de char que esté definido a 32 o 33, en vez de pillar la longitud de la constante MAX_….?
 
 
--Describir en development las dos maneras de dibujar el menú y capa de máquina emulada: 
+-Describir en development las dos maneras de dibujar el menú y capa de máquina emulada:
 con driver completo y mezclando píxeles, o con driver texto y poniendo capa menú siempre encima (y esta no tiene caché de putchar, solo la parte de carácter no modificado)
 
 
@@ -135,7 +135,6 @@ Considerar algun modo de dibujado mas rapido -> solventado con frameskip en zx d
 
 -ordenar directorios arriba en filesel? Pero entonces al pulsar una letra y buscar... a donde ira?
 
--Si se mueve ratón a zona redimensionado ventana, que la ventana cambie la esquina inferior derecha 
 
 -zxvision_get_char_at_position (usado al pulsar con raton en hotkeys) deberia tener en cuenta si hay offset de pantalla
 util en el mapa de aventura de texto cuando la leyenda siempre se ve arriba aunque haya scroll, para poder habilitar hotkeys pulsando el raton
@@ -146,8 +145,9 @@ util en el mapa de aventura de texto cuando la leyenda siempre se ve arriba aunq
 
 
 
--Quizá versión en un futuro en que al pulsar escape cierra todos los menús. 
-Aunque lo que son ventanas no de menú debería cerrar la actual y no todas? Además tendria que haber una tecla para solo cerrar la ventana en curso.
+-Quizá versión en un futuro en que al pulsar escape cierra todos los menús.
+Aunque lo que son ventanas no de menú debería cerrar la actual y no todas? Además tendria que haber una tecla para solo cerrar la ventana en curso
+(quizá con flecha izquierda)
 
 -cuando una tecla F no esta como default, no la envia a maquina emulada: ejemplo MSX F2, QL F5
 
@@ -163,15 +163,15 @@ O esta considerando mal el mostrar barras desplazamiento: quizá deberían salir
 -Visualmem mmc read/write en Windows no muestra bien posicion (siempre a 0). Probablemente porque es 32 bits y no gestiona bien
 valores long int
 
--Tema gui configurable todos sus elementos: fuentes (charset ya se puede), colores etc 
+-Tema gui configurable todos sus elementos: fuentes (charset ya se puede), colores etc
 
--Idea de animación para logo: ZEsarUX con letras de colores rojo amarillo verde azul. Se comprime el texto y la Z va pillando los colores de las letras 
+-Idea de animación para logo: ZEsarUX con letras de colores rojo amarillo verde azul. Se comprime el texto y la Z va pillando los colores de las letras
 
--Función que usando misma rutina de imprimir Unicode diga la longitud en bytes que ocupa el carácter. 
-Así sabremos la longitud de aquellos caracteres que si que imprimimos. Los que no, será 1 y interrogante 
+-Función que usando misma rutina de imprimir Unicode diga la longitud en bytes que ocupa el carácter.
+Así sabremos la longitud de aquellos caracteres que si que imprimimos. Los que no, será 1 y interrogante
 
 -Osd keyboard sin multitarea en ZX81 no va fino
- 
+
 -Sin multitarea, pulsaciones sobre la zona de scroll, hace efectivo el scroll cuando se mueve el raton o se pulsa boton o tecla
 
 -menu: cuando habilita scroll vertical porque no caben opciones, aparece tambien scroll horizontal
@@ -203,7 +203,7 @@ Lo hace realmente con visible_width y visible_height
 
 
 -Mejora para first aid:
-Un tercer botón que diga "take me there" para cuando sugiere menús, que te lleve al menú en cuestión 
+Un tercer botón que diga "take me there" para cuando sugiere menús, que te lleve al menú en cuestión
 (por ejemplo cuando detecta joystick y dice que vayas al menú de real joystick para configurarlo)
 
 
@@ -220,7 +220,7 @@ Y cierra menus pero no sale
 -menu about: sin zx desktop, sale muy ancho pues ancho por defecto en zxvision_generic_message_tooltip es ahora 40
 -quiza se deberia hacer mas uso de menu_center_x_from_width, en ventanas que ya no caben con ancho 32 con zxdesktop ancho 256 y abrir ventanas en zxdesktop
 
--Splash messages en overlay no deberían borrar las ventanas cuando opción de background windows even with menú closed 
+-Splash messages en overlay no deberían borrar las ventanas cuando opción de background windows even with menú closed
 
 
 -a veces al cambiar numero chips en settings-audio-ay chips se cuelga
@@ -228,12 +228,12 @@ Y cierra menus pero no sale
 -Mientras hay splash de inicio, si se pulsa F5, aparece por un momento overlays de ventanas, cuando F5 esta asignada a "Nothing"
 
 
--al cargar smartload, por ejemplo ultimo cargado es thelosttapesofalbion. situa el cursor ahi bien, 
+-al cargar smartload, por ejemplo ultimo cargado es thelosttapesofalbion. situa el cursor ahi bien,
 pero al subir para arriba desplaza desde scroll sin mover
 cursor hasta que esta arriba. O sea, deberia mover siempre cursor y no empezar a hacer scroll hasta que no esta arriba
 
 
--Con carga top speed salen dos footer ? El nuevo de rojo también...  
+-Con carga top speed salen dos footer ? El nuevo de rojo también...
 Quizá el Rojo debería ser el Tspeed que ya sale en la carga...
 Pues porque al ser un hotkey, se abre el menu y al cerrar el menu, se pierde el footer
 
@@ -254,7 +254,7 @@ Esto podria provocar que otros sitios que usan ZVFS (por ejemplo esxdos handler)
 desde filesel era la mmc
 Quiza solo el menu (y no esxdos handler , zxpand u otros) debe usar ZVFS. El resto, rutinas de sistema? -> esxdos, zxpand etc ya NO usan ZVFS
 
--En debug cpu, quizá al mover rueda de ratón tiene que volver de menú espera tecla. Si no, 
+-En debug cpu, quizá al mover rueda de ratón tiene que volver de menú espera tecla. Si no,
 es lo que hace que al moverse con la rueda por vista debug cpu, haya que hacer movimiento de raton para que funcione
 El problema es que mouse_wheel_vertical se lee y luego siempre se debe poner a 0
 Si la ponemos a 0 en bucle de leer tecla, luego no se lee realmente del menu debug cpu
@@ -264,16 +264,16 @@ Si la ponemos a 0 en bucle de leer tecla, luego no se lee realmente del menu deb
 
 
 -frecuencias chips audio como sensores? no sé si vale la pena pues los valores de frecuencias son exponenciales y por ejemplo
-las ultimas dos notas, una es el doble de la otra. Por tanto si usamos un widget de speedometer, estaria casi al 0 siempre excepto para 
+las ultimas dos notas, una es el doble de la otra. Por tanto si usamos un widget de speedometer, estaria casi al 0 siempre excepto para
 frecuencias muy altas.
 
 -quiza linea cursor en debug cpu ubicar en el centro
 
 - realtape browser que pille el setting de improved algorithm yes/no
 
-- Improved algorithm quizá renombrar a “alternate” algorithm 
+- Tape Improved algorithm quizá renombrar a “alternate” algorithm
 
-- Al salir cualquier mensaje splash luego no deberían desaparecer las ventanas: parece que desaparece la decoracion de ventanas 
+- Al salir cualquier mensaje splash luego no deberían desaparecer las ventanas: parece que desaparece la decoracion de ventanas
 momentaneamente pero al irse el splash, se recargan
 
 
@@ -305,7 +305,7 @@ en la ventana del teclado ya se actualiza con la máquina actual
 https://github.com/lavoiesl/osx-cpu-temp
 
 
--En info file de file utils, decir tipo de archivo. Usar alguna llamada común para tipo archivo y visor archivo 
+-En info file de file utils, decir tipo de archivo. Usar alguna llamada común para tipo archivo y visor archivo
 
 -hex editor: muestra pagina entera cuando una zona de memoria por ejemplo solo es de 2 bytes. Probar por ejemplo con debug memory zone
 
@@ -341,7 +341,7 @@ Otros TODO menos prioritarios, de aqui hasta el final del archivo:
 
 -poder usar kempston mouse desde menu si ventana de menu no tiene el foco (al igual que sucede con el teclado)
 
--Snapshots automáticos de nombre que depende del archivo cargado. Para tener siempre uno cuando se cambia de juego 
+-Snapshots automáticos de nombre que depende del archivo cargado. Para tener siempre uno cuando se cambia de juego
 
 -Opcional cargar snapshot y no cerrar menú. Mismo para Smartload pero solo con snapshots?
 
@@ -370,7 +370,7 @@ Hacer captura. Luego hacer captura de la derecha, etc
 
 
 
--Quizá algunas operaciones de archivos que se cancelen con esc que avise con ventana temporal de dicha cancelación 
+-Quizá algunas operaciones de archivos que se cancelen con esc que avise con ventana temporal de dicha cancelación
 
 -Convertir automático de cinta a wav, mediante uso de mantransfe
 
@@ -413,7 +413,7 @@ Info de tamaño ventana. Y tamaño ventana sin zoom
 -menu_ventana_scanf deberia retornar un codigo de retorno en caso de pulsado ESC
 
 -visualmem podria tener en cuenta toda la ram de una maquina: 128kb en +2, Z88 etc.... aunque dificil para +2 y Z88.... y necesario?
--visualmem que siga memory zone 
+-visualmem que siga memory zone
 
 -lectura de nombre de archivo en fileselector para stdout no admite espacios
 
